envoy-gateway/lab-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gw
spec:
  gatewayClassName: lab-eg
  listeners:
    - name: lab-listener
      protocol: HTTP
      port: 80
      hostname: "lab-http.lab"
      allowedRoutes:
        namespaces:
          from: All
    - name: test-listener
      protocol: HTTP
      port: 80
      hostname: "test.lab"
      allowedRoutes:
        namespaces:
          from: All
